Make a use counter name 1 char shorter to avoid line wrapping

This line became wrapped in The Blink Rename:
https://chromium-review.googlesource.com/472192

Use the DOM spelling of cancelable to get 1 char back:
https://dom.spec.whatwg.org/#dom-event-cancelable

This should avoid the need to make update_use_counter_feature_enum.py
more clever about parsing.

BUG=711205
R=haraken@chromium.org
NOPRESUBMIT=true

Review-Url: https://codereview.chromium.org/2825703002
Cr-Commit-Position: refs/heads/master@{#465189}

Former-commit-id: 37ab82a26af3aa8755c1ab245240ce92e6b9896c