third_party/WebKit/Source/core/events/TouchEventTest.cpp
@@ -86,11 +86,11 @@ TEST_F(TouchEventTest, PreventDefaultUncancelable) {
   EXPECT_THAT(MessageSources(), ElementsAre(kJSMessageSource));
 
   EXPECT_TRUE(UseCounter::IsCounted(
-      GetDocument(), UseCounter::kUncancellableTouchEventPreventDefaulted));
+      GetDocument(), UseCounter::kUncancelableTouchEventPreventDefaulted));
   EXPECT_FALSE(UseCounter::IsCounted(
       GetDocument(),
       UseCounter::
-          kUncancellableTouchEventDueToMainThreadResponsivenessPreventDefaulted));
+          kUncancelableTouchEventDueToMainThreadResponsivenessPreventDefaulted));
 }
 
 TEST_F(TouchEventTest,
@@ -109,11 +109,11 @@ TEST_F(TouchEventTest,
   EXPECT_THAT(MessageSources(), ElementsAre(kInterventionMessageSource));
 
   EXPECT_TRUE(UseCounter::IsCounted(
-      GetDocument(), UseCounter::kUncancellableTouchEventPreventDefaulted));
+      GetDocument(), UseCounter::kUncancelableTouchEventPreventDefaulted));
   EXPECT_TRUE(UseCounter::IsCounted(
       GetDocument(),
       UseCounter::
-          kUncancellableTouchEventDueToMainThreadResponsivenessPreventDefaulted));
+          kUncancelableTouchEventDueToMainThreadResponsivenessPreventDefaulted));
 }
 
 TEST_F(TouchEventTest,
